feat: switch database ORM

--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-PGDATABASE=postgres
-PGUSER=postgres
-PGPASSWORD=password
-PGHOST=localhost
-SECRET=gca2345
-REDISPORT=6379
-REDISHOST=localhost
+CONNECTION_STRING=Driver={SQL Server Native Client 10.0};Server=csg093\csg;Database=FI_WINERY_SALES;Trusted_Connection=yes;
