--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "dotenv": "^10.0.0",
     "excel-parser": "^0.2.2",
     "exceljs": "^4.2.1",
+    "msnodesqlv8": "^2.2.0",
+    "mssql": "^7.1.0",
     "pg": "^8.6.0",
     "read-excel-file": "^5.1.0",
     "sequelize": "^6.6.2",
+    "sequelize-msnodesqlv8": "^0.2.6-beta.8",
+    "tedious": "^11.0.9",
     "xls-parser": "^3.1.0",
     "xlsx": "^0.16.2"
   },
